--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Розыгрыш призов для участников GiveAway</title>
+    <script src="server_requests.js"></script>
     <script src="script.js"></script>
     <script src="items_to_elements.js"></script>
     <link rel="stylesheet" href="style.css">
