noscript message added

--- a/play.html
+++ b/play.html
@@ -46,6 +46,9 @@
         <div class="title">Розыгрыш призов для участников конкурса</div>
     </header>
     <div id="playground">
+        <noscript>Мы не можем показать Вам рулетку, так как Вы используете устаревший браузер. Но вы можете <a
+                onclick="location.reload()" style="color: blue">просто нажать сюда</a> и Вам достанется случайный приз.</noscript>
+
         <div id="roulette-container">
             <div id="roulette" class="rot"></div>
         </div>
